Fix iOS bug with content overflowing the container

--- a/themes/default.less
+++ b/themes/default.less
@@ -15,15 +15,15 @@
 @import "icons/famfamfam.less";
 
 .sceditor-container {
-	position: relative;
-	border: 1px solid #aaa;
-	background: #fff;
-
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	-opera-border-radius: 4px;
-	-khtml-border-radius: 4px;
-	border-radius: 4px;
+  position: relative;
+  border: 1px solid #aaa;
+  background: #fff;
+  
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -opera-border-radius: 4px;
+  -khtml-border-radius: 4px;
+  border-radius: 4px;
 }
 
 .sceditor-container.resizing {
@@ -46,6 +46,10 @@ div.sceditor-dropdown, div.sceditor-dropdown div {
 		margin: 5px;
 		resize: none;
 		background: #fff;
+	}
+	div.ios-fix {
+	  -webkit-overflow-scrolling: touch !important;
+	  overflow: scroll !important;
 	}
 	div.sceditor-resize-cover {
 		position: absolute;
